--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-  margin:100px
+  margin:100px;
+  font-family: sans-serif
 }
-h2 {
-  text-align: left;
+figcaption {
+  float: right;
   font-size: 20px;
   font-family: cursive;
   margin: 0px;
@@ -12,20 +13,30 @@ header p {
   margin: 0px;
   color: rgba(136, 135, 135, 0.979);
 }
+nav span {
+float: right;
+}
 h1 {
   text-align: left;
-  font-family: sans-serif;
   font-size: 30px;
+  margin-bottom: 0px;
 }
 h4 {
-  font-size: 10px
+  font-size: 10px;
+  margin-top: 0px;
 }
 p {
   font-size: 15px;
   color: rgba(136, 135, 135, 0.979);
 }
+ul {
+  background-image: url(img/list-bg.png); 
+}
+
 footer {
   text-align: center;
   color: rgba(136, 135, 135, 0.979);
   font-size: 5pt;
 };
+
+ 
